; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_gianfar.c_gfar_interrupt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_gianfar.c_gfar_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.gfar_private = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@IEVENT_RX_MASK = common dso_local global i32 0, align 4
@IEVENT_TX_MASK = common dso_local global i32 0, align 4
@IEVENT_ERR_MASK = common dso_local global i32 0, align 4
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @gfar_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gfar_interrupt(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.net_device*, align 8
  %6 = alloca %struct.gfar_private*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.net_device*
  store %struct.net_device* %9, %struct.net_device** %5, align 8
  %10 = load %struct.net_device*, %struct.net_device** %5, align 8
  %11 = call %struct.gfar_private* @netdev_priv(%struct.net_device* %10)
  store %struct.gfar_private* %11, %struct.gfar_private** %6, align 8
  %12 = load %struct.gfar_private*, %struct.gfar_private** %6, align 8
  %13 = getelementptr inbounds %struct.gfar_private, %struct.gfar_private* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = call i32 @gfar_read(i32* %15)
  store i32 %16, i32* %7, align 4
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* @IEVENT_RX_MASK, align 4
  %19 = and i32 %17, %18
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %25

21:                                               ; preds = %2
  %22 = load i32, i32* %3, align 4
  %23 = load i8*, i8** %4, align 8
  %24 = call i32 @gfar_receive(i32 %22, i8* %23)
  br label %25

25:                                               ; preds = %21, %2
  %26 = load i32, i32* %7, align 4
  %27 = load i32, i32* @IEVENT_TX_MASK, align 4
  %28 = and i32 %26, %27
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %34

30:                                               ; preds = %25
  %31 = load i32, i32* %3, align 4
  %32 = load i8*, i8** %4, align 8
  %33 = call i32 @gfar_transmit(i32 %31, i8* %32)
  br label %34

34:                                               ; preds = %30, %25
  %35 = load i32, i32* %7, align 4
  %36 = load i32, i32* @IEVENT_ERR_MASK, align 4
  %37 = and i32 %35, %36
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %39, label %43

39:                                               ; preds = %34
  %40 = load i32, i32* %3, align 4
  %41 = load i8*, i8** %4, align 8
  %42 = call i32 @gfar_error(i32 %40, i8* %41)
  br label %43

43:                                               ; preds = %39, %34
  %44 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %44
}

declare dso_local %struct.gfar_private* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @gfar_read(i32*) #1

declare dso_local i32 @gfar_receive(i32, i8*) #1

declare dso_local i32 @gfar_transmit(i32, i8*) #1

declare dso_local i32 @gfar_error(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
